fix some layout issues

--- a/Pages/Product-Example/Product-Example.css
+++ b/Pages/Product-Example/Product-Example.css
@@ -37,14 +37,14 @@ h1, h2, h3 {
     height: 80vh;      
     overflow: hidden;  
     margin-bottom: 60px;
-    border: 1px solid red;
+   
 }
 .product-visual {
    
     width: 100%;
     height: 100%; 
     position: relative;
-    border: 1px solid red;
+
     
 }
 .product-visual img {
@@ -60,7 +60,7 @@ h1, h2, h3 {
    
    width: 100%;
  
-    border: 1px solid red;
+
 }
 .product-details {
     padding: 0 0 0 60px; 
